--- a/views/login.html
+++ b/views/login.html
@@ -57,7 +57,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active" 
-            aria-current="page" href="/signup">Log In</a>
+            aria-current="page" href="/login">Log In</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="/pleas" >Posts</a>
